Revert "changes in util"
This reverts commit b993d53bf21de0c54bf450a7f187e01b6d715bc6.