@@ -24,6 +24,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Component;
@@ -34,10 +35,6 @@ import lombok.extern.slf4j.Slf4j;
 @Component
 @Slf4j
 public class PropertyUtils {
-
-	// private PropertyUtils() {
-	// // Utility class - private constructor
-	// }
 
 	/**
 	 * Trim props.
@@ -166,7 +163,7 @@ public class PropertyUtils {
 	private Collection<String> trimCollection(Object obj) {
 		if (null != obj) {
 			Collection<String> list = (Collection<String>) obj;
-			return list.stream().map(String::trim).toList();
+			return list.stream().map(String::trim).collect(Collectors.toList());
 		}
 		return null; // NOSONAR
 	}
